# avr-boilerplate

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
simulation/: SimulIDE-simulation.sim1  avr-boilerplate.pdsprj
src/: main.c
